[tool.poetry]
name = "loan-application-adapter-fastapi"
version = "0.1.0"
description = ""
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-slim = "^0.111.0"
loan-application-application = {path = "../../../application", develop = true}
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
